<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <POU Name="P_SysCheckMain" Id="{5d4c533c-fa73-4689-8bc4-4f4bca8a62a4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_SysCheckMain
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//check real-time communication with terminals (working counter wc)
SysCheck.bTermErrRT	:=	F_CheckTerm();

//check sensors
SysCheck.bSensErr	:=	F_CheckSens();

//check operating conditions
SysCheck.bAmbTemp	:=	F_CheckAmbTemp();
SysCheck.bBP			:=	F_CheckBrinePressure();
SysCheck.bHCP		:=	F_CheckHeatCirPress();

//check compression cycle pressures
SysCheck.bCompCyc	:=	F_CheckCompCycPress();

//check phase sequence
SysCheck.bPhaseSeqCh:=	F_CheckPhaseSeq();

//check heating circuit temperatures
SysCheck.bHeatTemp	:=	F_CheckHeatCirTemp();

//check compressor outlet temperature
SysCheck.bCompOut	:=	F_CheckCompOutTemp();]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>